--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,8 @@ const navItems = [
     items: [
       { title: "School Districts", href: "/school-districts" },
       { title: "CDL Information", href: "https://digitaltennessee.tnsos.gov/comm_driver_license_manual/1/" },
-      { title: "Forms & Documents", href: "#forms" }
+      { title: "Forms & Documents", href: "#forms" },
+      { title: "Scholarship Application", href: "/scholarship" }
     ]
   },
   {
